@@ -1359,7 +1359,7 @@ specifier|final
 name|String
 name|TEST_KEY
 init|=
-literal|"testKey"
+literal|"test_key"
 decl_stmt|;
 DECL|field|fsHelper
 specifier|private
