@@ -450,6 +450,8 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11309. System class pattern package.Foo should match
     package.Foo$Bar, too (Gera Shegalov via jlowe)
 
+    HADOOP-11312. Fix unit tests to not use uppercase key names. (wang)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
